made some changes

--- a/Assignment4/index.html
+++ b/Assignment4/index.html
@@ -47,12 +47,12 @@
         <section id="storage">
             <div class = "box" id="localStorage">
                 <h1>Local Storage:</h1>
-                <h2 id="local">0</h2>
+                <h2 id="local"></h2>
                 <button class="btn" onclick="incrementLocal()">Increment</button>
             </div>
             <div class = "box" id="sessionStorage">
                 <h1>Session Storage:</h1>
-                <h2 id="session">0</h2>
+                <h2 id="session"></h2>
                 <button class="btn" onclick="incrementSession()">Increment</button>
             </div>
         </section>
