--- a/Assignment4/index.html
+++ b/Assignment4/index.html
@@ -1,47 +1,7 @@
 <html>
     <head>
         <title>Storage</title>
-        <style>
-            html
-            {
-                margin:0;
-                padding:0;
-            }
-            body
-            {
-                background-image: url(Images/bg.jpg);
-            }
-            #storage
-            {
-                display:flex;
-                justify-content: center;
-                height: 100%;
-                width: 100%; 
-                flex-direction: column;               
-            }
-            .box
-            {
-                width: 100%;
-                height: 40%;
-                display: flex;
-                flex-direction: column;
-            }
-            .box h2
-            {
-                text-align: center;
-                font-size: 4rem;
-            }
-            .btn
-            {
-                width:6rem;
-                height: 2rem;
-                background-color: blueviolet;
-                color: white;
-                font-size: large;
-                font-family:'Times New Roman', Times, serif;
-                align-self: center;
-            }
-        </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <section id="storage">
