--- a/RestaurantApp/index.html
+++ b/RestaurantApp/index.html
@@ -39,7 +39,7 @@
 							<th>S.No</th>
 							<th>Item</th>
 							<th>Price</th>
-							<th></th>
+							<th>Item Total</th>
 							</tr>
 						</table>
 						<p id="total"></p>
